[package]
name = "verify-https-site-cert"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = {version="2.33.3", features=["yaml"]}
native-tls = "0.2.7"
